# shortcut

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.audit  Dockerfile.windows-msvc  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  vite.config.js
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml
docs/: ARCHITECTURE.md  BACKEND.md  BUILD.md  BUILD_MACOS.md  EXTENDING.md  FRONTEND.md  INSTALL.md  PRODUCTION.md  PROVIDERS.md  README.md  SETUP.md  USER_GUIDE_MACOS.md
docs/features/: ACTION_WHEEL.md  DICTATION.md  INDICATOR.md  LOCAL_STT.md  SCREEN_QUESTION.md  TEXT_TRANSFORM_HISTORY.md
scripts/: run-checks.sh
src/: app.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: action_menu.rs  build_config.rs  clipboard.rs  errors.rs  history.rs  lib.rs  main.rs  screen_capture.rs  text_transform.rs  text_transform_history.rs  window_style.rs
src-tauri/src/config/: commands.rs  mod.rs
src-tauri/src/config/types/: app.rs  dictation.rs  hotkeys.rs  mod.rs  prompts.rs  providers.rs  user.rs
src-tauri/src/hotkeys/: mod.rs  parser.rs  registration.rs
src-tauri/src/indicator/: lifecycle.rs  mod.rs  positioning.rs  topology.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  grok.rs  http.rs  local.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/providers/discovery/: anthropic.rs  filters.rs  gemini.rs  local.rs  mod.rs  ollama.rs  openai.rs  openai_compat.rs  xai.rs
src-tauri/src/transcription/: mod.rs  model_manager.rs  soniox_provider.rs  utils.rs
src-tauri/src/transcription/local_provider/: audio.rs  mod.rs  ort_init.rs  transcribe.rs
src-tauri/src/transcription/soniox_api/: mod.rs  types.rs
src/lib/api/: clipboard.ts  config.ts  core.ts  dictation.ts  history.ts  providers.ts  shortcuts.ts  tauri.ts  text-transform-history.ts  windows.ts
src/lib/components/action-menu/: PieMenu.svelte  PieWedge.svelte  index.ts
src/lib/components/actions/: ActionsShortcutGrid.svelte  PromptEditor.svelte  ShortcutSection.svelte
src/lib/components/debug/: LogFilter.svelte  LogViewer.svelte  index.ts
src/lib/components/dictation/: AudioSettingsPanel.svelte  EngineCard.svelte  EngineSelector.svelte  MicrophoneSelector.svelte  MicrophoneTest.svelte  ModelDownload.svelte  OnboardingLlmStep.svelte  TermsList.svelte  index.ts
src/lib/components/history/: EmptyHistory.svelte  HistoryItem.svelte  HistoryList.svelte  Pagination.svelte  RecentEntries.svelte  index.ts
src/lib/components/indicator/: IndicatorDots.svelte  IndicatorWindow.svelte  index.ts
src/lib/components/layout/: NavItem.svelte  Sidebar.svelte
src/lib/components/onboarding/: OnboardingStepComplete.svelte  OnboardingStepLlm.svelte  OnboardingStepStt.svelte  OnboardingStepper.svelte  index.ts
src/lib/components/overlay-chat/: OverlayChat.svelte  OverlayChatInput.svelte  OverlayChatMessage.svelte  index.ts
src/lib/components/settings/: ApiKeyInput.svelte  LanguageSelector.svelte  ProviderCredentialsForm.svelte  SettingsSection.svelte  SetupBanner.svelte  TextInput.svelte  (+3 more)
src/lib/i18n/: index.ts
src/lib/services/: microphone-permission.ts  microphone.ts
src/lib/state/: activity.svelte.ts  app-settings.svelte.ts  app.svelte.ts  debug.svelte.ts  dictation-config.svelte.ts  engine.svelte.ts  grammar-config.svelte.ts  history.svelte.ts  improve-config.svelte.ts  onboarding.svelte.ts  overlay-chat.svelte.ts  providers-settings-sync.ts  providers-settings-tasks.ts  providers-settings.svelte.ts  providers.svelte.ts  screen-question-config.svelte.ts  settings.svelte.ts  shortcuts.svelte.ts  text-transform-history.svelte.ts  translate-config.svelte.ts
src/lib/styles/: app.css
src/lib/types/: index.ts
src/lib/utils/: async-state.ts  error.ts  format.ts  logger.ts  save-status.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/action-menu/: +layout.ts  +page.svelte
src/routes/app-settings/: +page.svelte
src/routes/debug/: +page.svelte
src/routes/history/: +page.svelte
src/routes/indicator/: +layout.ts  +page.svelte
src/routes/onboarding/: +page.svelte
src/routes/screen-question/: +layout.ts  +page.svelte
src/routes/settings/: +page.svelte
src/routes/shortcuts/: +page.svelte
src/routes/text-transform-history/: +page.svelte
(+77 files in other folders)
